# stability_analysis

./: .gitignore  README.md  main.py  main_4_alexandre.py  main_4_alexandre_2.py  main_alexandre.py  main_alexandre_original.py  main_check_double_failures.py  main_contingency_basecase_stable.py  main_original.py  pyproject.toml  small_signal_ACOPF.py  small_signal_analysis.py
StabilityAnalysis/analysis/: small_signal.py
StabilityAnalysis/data/: __init__.py  generic.xlsx
StabilityAnalysis/modify_GridCal_grid/: assign_StaticGen_to_grid.py
StabilityAnalysis/opal/: process_opal.py
StabilityAnalysis/operating_point_from_datagenerator/: datagen_OP.py
StabilityAnalysis/powerflow/: fill_d_grid_after_powerflow.py  process_powerflow.py  slack_bus.py
StabilityAnalysis/preprocess/: admittance_matrix.py  parameters.py  preprocess_data.py  state_switches.py
StabilityAnalysis/state_space/: build_ss.py  generate_NET.py  generate_elements.py  ss_sg.py  ss_vsc.py
stability_analysis/analysis/: small_signal.py
stability_analysis/data/: data_sg.xlsx  data_vsc.xlsx  dataio.py
stability_analysis/modify_GridCal_grid/: assign_Generators_to_grid.py  assign_PQ_Loads_to_grid.py  assign_SlackBus_to_grid.py
stability_analysis/opal/: process_opal.py  receive_lfdata.py
stability_analysis/operating_point_from_datagenerator/: datagen_OP.py
stability_analysis/optimal_power_flow/: process_optimal_power_flow.py
stability_analysis/powerflow/: GridCal_powerflow.py  check_feasibility.py  fill_d_grid_after_powerflow.py  process_powerflow.py  slack_bus.py
(+95 files in other folders)
