[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "StabilityAnalysis"
version = "0.0.1"
authors = [
    {name="Francesca Rossi", email="francesca.rossi@upc.edu"},
    {name="Eduardo Iraola", email="eduardo.iraola@bsc.es"},
]
description = "Stability analysis toolbox for electrical grids."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/iraola/StabilityAnalysis"