[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[metadata]
name = "stability_analysis"
version = "0.0.1"
authors = [
    {name="Francesca Rossi", email="francesca.rossi@upc.edu"},
    {name="Eduardo Iraola", email="eduardo.iraola@bsc.es"},
]
description = "Stability analysis toolbox for electrical grids."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
repository = "https://github.com/iraola/stability_analysis"